--- a/umc/index_generator.html
+++ b/umc/index_generator.html
@@ -4,6 +4,6 @@
      <li><a href="mshseri.rdf">mshseri.rdf</a></li>
      <li><a href="msharch.rdf">msharch.rdf</a></li>
    </ul>
-   <a href="wpaper/">wpaper//</a>
+   <a href="wpaper/">wpaper/</a>
  </body>
 </html>
