--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html>
  <body>This directory Monash contains:
-   <ul>
-     <li><a href="mshseri.rdf">mshseri.rdf</a></li>
-     <li><a href="msharch.rdf">msharch.rdf</a></li>
-   </ul>
-   <a href="wpaper/">Working Papers/</a>
+   <a href="umc/">umc//</a>
  </body>
 </html>
