--- a/umc/wpaper/index_generator.html
+++ b/umc/wpaper/index_generator.html
@@ -1,5 +1,5 @@
 <html>
- <body>This directory (Monash /wpaper) contains:
+ <body>This directory (Monash EBS working paper series) contains:
    <ul>
      <li><a href="ebs.wps.2021.rdf">ebs.wps.2021.rdf</a></li>
    </ul>
