--- a/umc/index_generator.html
+++ b/umc/index_generator.html
@@ -1,5 +1,5 @@
 <html>
- <body>This directory Monash contains:
+ <body>This directory (umc) contains:
    <ul>
      <li><a href="mshseri.rdf">mshseri.rdf</a></li>
      <li><a href="msharch.rdf">msharch.rdf</a></li>
