--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
- <body>This directory Monash contains:
+ <body>This directory (umc) contains:
    <a href="umc/">umc/</a>
  </body>
 </html>
