update index.html with new subdirectory 'ebswps'

--- a/msh/index.html
+++ b/msh/index.html
@@ -1,9 +1,9 @@
 <html>
- <body>This directory (umc) contains:
+ <body>This directory (msh) contains:
    <ul>
      <li><a href="mshseri.rdf">mshseri.rdf</a></li>
      <li><a href="msharch.rdf">msharch.rdf</a></li>
    </ul>
-   <a href="wpaper/">wpaper/</a>
+   <a href="ebswps/">ebswps/</a>
  </body>
 </html>
