--- a/msh/index_generator.html
+++ b/msh/index_generator.html
@@ -1,1 +1,9 @@
-
+<html>
+ <body>This directory (msh) contains:
+   <ul>
+     <li><a href="mshseri.rdf">mshseri.rdf</a></li>
+     <li><a href="msharch.rdf">msharch.rdf</a></li>
+   </ul>
+   <a href="ebswps/">ebswps/</a>
+ </body>
+</html>
