Change "umc" to "msh" folder

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
- <body>This directory (umc) contains:
-   <a href="umc/">umc/</a>
+ <body>This directory (msh) contains:
+   <a href="msh/">msh/</a>
  </body>
 </html>
