--- a/msh/ebswps/index.html
+++ b/msh/ebswps/index.html
@@ -1,6 +1,7 @@
 <html>
  <body>This directory (Monash EBS working paper series) contains:
    <ul>
+    <li><a href="ebs.wps.2025.rdf">ebs.wps.2024.rdf</a></li>
     <li><a href="ebs.wps.2024.rdf">ebs.wps.2024.rdf</a></li>
     <li><a href="ebs.wps.2023.rdf">ebs.wps.2023.rdf</a></li>
     <li><a href="ebs.wps.2022.rdf">ebs.wps.2022.rdf</a></li>
